// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageCard Renders Dont UsageCard when kind=dont 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #D20600;
  background-color: #FFE6E5;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #D20600;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D20600;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-5.emotion-5 {
  width: 24px;
  height: 24px;
  fill: #D20600;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5.emotion-5 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5.emotion-5 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
}

.emotion-9 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-9 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-10 {
  margin-bottom: 16px;
}

.emotion-11 {
  border-style: solid;
  border-color: #D20600;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-13 {
  font-family: "Poppins",sans-serif;
  font-size: 22px;
  line-height: 24.75px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-13::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-13::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-14 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #D20600;
}

.emotion-14 svg {
  fill: #D20600;
}

.emotion-16 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-16 svg {
  fill: #2E2E2E;
}

.emotion-16::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-16::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="flag"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <hr
              aria-hidden="true"
              class="emotion-11"
              data-testid="divider"
            />
            <div
              class="emotion-10"
            />
            <section
              class="emotion-13"
            >
              <h1
                class="nk-headline-heading emotion-14"
              >
                Don’t
              </h1>
            </section>
          </div>
          <div
            class="emotion-10"
          >
            <p
              class="emotion-16"
            >
              Description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UsageCard Renders default (Do) UsageCard 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #0A782A;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #0A782A;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #0A782A;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-5.emotion-5 {
  width: 24px;
  height: 24px;
  fill: #0A782A;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5.emotion-5 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5.emotion-5 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
}

.emotion-9 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-9 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-10 {
  margin-bottom: 16px;
}

.emotion-11 {
  border-style: solid;
  border-color: #0A782A;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-13 {
  font-family: "Poppins",sans-serif;
  font-size: 22px;
  line-height: 24.75px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-13::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-13::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-14 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A782A;
}

.emotion-14 svg {
  fill: #0A782A;
}

.emotion-16 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-16 svg {
  fill: #2E2E2E;
}

.emotion-16::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-16::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="flag"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <hr
              aria-hidden="true"
              class="emotion-11"
              data-testid="divider"
            />
            <div
              class="emotion-10"
            />
            <section
              class="emotion-13"
            >
              <h1
                class="nk-headline-heading emotion-14"
              >
                Do
              </h1>
            </section>
          </div>
          <div
            class="emotion-10"
          >
            <p
              class="emotion-16"
            >
              Description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
